--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-navigation/stack": "^5.14.4",
     "base-64": "^1.0.0",
     "expo": "^41.0.0",
-    "firebase": "^8.4.2",
+    "expo-firebase-recaptcha": "^1.4.1",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-webview": "11.2.3",
     "react-navigation": "^4.3.9",
     "react-navigation-stack": "^2.5.1"
   },
