--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-webview": "11.2.3",
     "react-navigation": "^4.3.9",
-    "react-navigation-stack": "^2.5.1"
+    "react-navigation-stack": "^2.5.1",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
