--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-value-picker": "^0.1.4",
     "react-native-webview": "11.2.3",
+    "react-native-wheel-scroll-picker": "^0.2.4",
+    "react-native-wheel-scrollview-picker": "^1.0.3",
     "react-navigation": "^4.3.9",
     "react-navigation-stack": "^2.5.1",
     "validator": "^13.6.0"
