--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.14.4",
     "base-64": "^1.0.0",
     "expo": "^41.0.0",
+    "expo-app-loading": "^1.0.3",
     "expo-firebase-recaptcha": "^1.4.1",
     "firebase": "8.2.3",
     "react": "16.13.1",
@@ -28,7 +29,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-webview": "11.2.3",
-    "react-navigation": "^4.3.9",
+    "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.5.1",
     "validator": "^13.6.0"
   },
